# sample-health-mcp-server

./: .dockerignore  .env  .env.example  .gitignore  CONTRIBUTING.md  DOCKER.md  DOCKER_SETUP_SUMMARY.md  Dockerfile  PROJECT_STRUCTURE.md  README.md  TESTING_GUIDE.md  THIRD_PARTY_LICENSES.md  docker-build.sh  docker-compose.yml  final_test_report.py  mcp_protocol_test.py  pyproject.toml  pytest.ini  run-tests.sh  simple_test.py  test-container.sh  test-integration.py  test-mcp-client.py  test_mcp_client.py  test_mcp_tools.py  test_tools.py  working_test.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
.kiro/settings/: mcp.json
.kiro/specs/pet-clinic-health-check-investigation/: requirements.md
aws_health_mcp/: __init__.py
aws_health_mcp/server/: __init__.py  __main__.py  client.py  config.py  consts.py  debug_helper.py  formatters.py  org_tools.py  server.py
awslabs/aws_health_mcp_server/: __init__.py  __main__.py  client.py  consts.py  debug_helper.py  errors.py  formatters.py  models.py  server.py
examples/: .env.example  mcp-config.json
tests/: __init__.py  test_aws_health_mcp_server.py  test_server.py
